Fixed vim + tmux refresh issue

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,7 +70,7 @@ set-window-option -g monitor-activity off
 set-option -g bell-action none
 
 set -g default-terminal "screen-256color"
-set -g default-shell "/bin/bash"
+set -g default-shell "/usr/bin/zsh"
 
 # The modes {
 #setw -g clock-mode-colour colour135
@@ -131,7 +131,7 @@ set -g @continuum-restore 'on'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
